# local-rag-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  setup.py  test_chunker.py  test_integration.py  test_lancedb_store.py  test_mcp_tools.py  test_parsers.py  设计方案.md
.github/workflows/: publish.yml  python-publish.yml
src/: __init__.py  lancedb_store.py  logger.py  sampling.py  server.py  status.py  watcher.py
src/local_rag_mcp/: chunker.py  engine.py  lancedb_store.py  logger.py  sampling.py  watcher.py
src/local_rag_mcp/parsers/: __init__.py  pdf_parser.py
src/parsers/: excel_parser.py  pdf_parser.py  text_parser.py  word_parser.py
src/rag_mcp/: engine.py  server.py
src/rag_mcp/parsers/: text_parser.py  word_parser.py
tests/: conftest.py  test_chunker.py  test_engine.py  test_integration.py  test_lancedb_store.py  test_mcp_tools.py  test_parsers.py
