[project]
name = "rag-mcp"
version = "2.1.0"
description = "RAG Knowledge MCP Server — FastMCP + LanceDB + Hybrid Search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "lancedb>=0.7",
    "pyarrow>=16.0",
    "watchdog>=4.0",
    "loguru>=0.7",
    "pypdf>=4.2",
    "python-docx>=1.2",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiofiles>=23.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
build = [
    "cython>=3.0",
    "setuptools>=75",
]

[project.scripts]
rag-mcp = "rag_mcp.server:main"
