[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-mcp"
version = "2.1.0"
description = "RAG Knowledge MCP Server — FastMCP + LanceDB + Hybrid Search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HeJuncheng", email = "3410472132@qq.com"},
]
keywords = ["mcp", "rag", "lancedb", "hybrid-search", "llm", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "lancedb>=0.7",
    "pyarrow>=16.0",
    "watchdog>=4.0",
    "loguru>=0.7",
    "pypdf>=4.2",
    "python-docx>=1.2",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiofiles>=23.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/junchenghe01/local-rag-mcp"
Repository = "https://github.com/junchenghe01/local-rag-mcp"
Issues = "https://github.com/junchenghe01/local-rag-mcp/issues"

[project.scripts]
local-rag-mcp = "local_rag_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
